--- a/app/src/main/res/layout/demo1.xml
+++ b/app/src/main/res/layout/demo1.xml
@@ -7,13 +7,13 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="使用 AsyncTask 来下载图片" />
+        android:text="@string/demo1_txt_str" />
     
     <ImageView 
         android:id="@+id/imgView_test"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:padding="10dp"/>
+        android:layout_marginTop="@dimen/demo_img_margin_top"
+        android:padding="@dimen/demo_img_padding"/>
 
 </RelativeLayout>
