--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,5 +3,9 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="demo_img_margin_top">30dp</dimen>
+    <dimen name="demo_img_padding">10dp</dimen>
+    <dimen name="demo3_gif_padding_left">14dp</dimen>
+    <dimen name="demo3_git_padding_top">4dp</dimen>
 
 </resources>
