--- a/app/src/main/res/layout/activity_demo3.xml
+++ b/app/src/main/res/layout/activity_demo3.xml
@@ -5,6 +5,10 @@
     android:orientation="vertical"
     tools:context="com.xyggun.mydemo.StartActivity">
 
+    <include
+        android:id="@+id/header"
+        layout="@layout/view_header" />
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
