--- a/app/src/main/res/layout/view_header.xml
+++ b/app/src/main/res/layout/view_header.xml
@@ -1,49 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical" >
+    android:paddingTop="20dp"
+    android:gravity="center"
+    android:background="#aa881f">
 
-    <ImageView
-        android:id="@+id/but_header_back"
-        style="@style/layout_style"
-        android:layout_centerVertical="true"
-        android:contentDescription="@string/header_view_img"
-        android:src="@drawable/back"
-        android:background="@drawable/but_header_back" />
+    <TextView
+        android:id="@+id/back_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        style="@style/text_style16"
+        android:textColor="@color/white"
+        android:padding="10dip"
+        android:text="@string/app_back_text" />
 
-    <LinearLayout
-        android:id="@+id/header_center_view"
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
-        android:layout_centerInParent="true" >
-        <TextView
-            android:id="@+id/head_view_title"
-            style="@style/text_style18"
-            android:textSize="19sp"
-            android:gravity="center_vertical"
-            android:layout_height="fill_parent"
-            android:textColor="@color/white" />
-    </LinearLayout>
-    <Button
-        android:id="@+id/header_right_btn"
+        android:layout_weight="1"
+        style="@style/text_style18"
+        android:textColor="@color/white"
+        android:padding="10dip"
+        android:gravity="center"
+        android:text="@string/app_name" />
+
+    <TextView
+        android:id="@+id/left_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_centerVertical="true"
-        android:background="@drawable/but_header_back"
-        android:textColor="#ffffff"
-        android:textSize="16sp"
-        android:visibility="gone" />
-    <ImageButton
-        android:id="@+id/header_right_map"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_centerVertical="true"
-        android:contentDescription="@string/header_view_img"
-        android:visibility="gone"
-        android:src="@drawable/listbutton"
-        android:background="@drawable/but_header_back" />
-</RelativeLayout>
+        android:visibility="invisible"
+        style="@style/text_style16"
+        android:textColor="@color/white"
+        android:padding="10dip"
+        android:text="操作"/>
+</LinearLayout>
