--- a/app/src/main/res/layout/activity_jpush_main.xml
+++ b/app/src/main/res/layout/activity_jpush_main.xml
@@ -1,43 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-    <RelativeLayout android:layout_width="fill_parent"
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:background="@drawable/tiledstripes"
-        android:layout_height="fill_parent" >
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:background="@drawable/tiledstripes">
+
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="8dip" >
+        android:padding="8dip">
+
         <TextView
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            
-             />
+            android:layout_height="wrap_content" />
+
         <TextView
             android:id="@+id/tv_appkey"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dip"
-              />
+            android:layout_marginTop="8dip" />
+
         <TextView
             android:id="@+id/tv_package"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dip"
-              />
-         <TextView
+            android:layout_marginTop="8dip" />
+
+        <TextView
             android:id="@+id/tv_imei"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dip"
-              />
-         
+            android:layout_marginTop="8dip" />
+
         <TextView
             android:id="@+id/tv_version"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dip"
-              />
+            android:layout_marginTop="8dip" />
 
         <Button
             android:id="@+id/init"
@@ -45,34 +45,36 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dip"
             android:text="initPush" />
-        
-          <Button
+
+        <Button
             android:id="@+id/stopPush"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dip"
             android:text="stopPush" />
-            <Button
+
+        <Button
             android:id="@+id/resumePush"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dip"
             android:text="resumePush" />
-            
-            <EditText
+
+        <EditText
             android:id="@+id/msg_rec"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dip"
             android:visibility="invisible" />
-             
-       
-   </LinearLayout>
-      <Button
-            android:id="@+id/setting" 
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            
-            android:text="高级功能" /> 
+
+
+    </LinearLayout>
+
+    <Button
+        android:id="@+id/setting"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+
+        android:text="高级功能" />
 </RelativeLayout>
