--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,11 +1,14 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    tools:context="com.xyggun.mydemo.StartActivity" >
+    android:layout_height="fill_parent">
+
+    <include
+        android:id="@+id/header"
+        layout="@layout/view_header" />
 
     <ListView 
         android:id="@+id/listview_main"
+        android:layout_below="@+id/header"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:fadingEdge="none">
