--- a/app/src/main/res/layout/view_loading.xml
+++ b/app/src/main/res/layout/view_loading.xml
@@ -2,14 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical">
 
     <ImageView
         android:id="@+id/imageView1"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:contentDescription="@string/demo_text_contentdescription"
         android:gravity="center_vertical"
-        android:src="@drawable/loading"
-        android:contentDescription="@string/demo_text_contentdescription" />
-    		
+        android:src="@drawable/loading" />
+
 </LinearLayout>
