提交 地图demo修改

--- a/app/src/main/res/layout/activity_baidu_map_demo.xml
+++ b/app/src/main/res/layout/activity_baidu_map_demo.xml
@@ -10,9 +10,48 @@
 
     <com.baidu.mapapi.map.MapView
         android:id="@+id/my_map_view"
-        android:layout_below="@+id/header"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_below="@+id/header">
 
     </com.baidu.mapapi.map.MapView>
+
+    <LinearLayout
+        android:id="@+id/radio_menu"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/header"
+        android:background="@color/white"
+        android:orientation="vertical"
+        android:visibility="gone">
+
+        <Button
+            android:id="@+id/btn_map_normal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/action_map_normal" />
+
+        <Button
+            android:id="@+id/btn_map_satelltle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/action_map_satelltle" />
+
+        <Button
+            android:id="@+id/btn_map_traffic_enabled"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/action_map_traffic_enabled" />
+
+        <Button
+            android:id="@+id/btn_heat_map_enabled"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/action_heat_map_enabled" />
+        <Button
+            android:id="@+id/btn_location"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/action_map_location" />
+    </LinearLayout>
 </RelativeLayout>
