--- a/app/src/main/res/layout/view_loading.xml
+++ b/app/src/main/res/layout/view_loading.xml
@@ -8,8 +8,8 @@
         android:id="@+id/imageView1"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:contentDescription="@string/demo_text_contentdescription"
+        android:contentDescription="@string/demo_text_content_description"
         android:gravity="center_vertical"
-        android:src="@drawable/loading" />
+        android:src="@drawable/ic_load" />
 
 </LinearLayout>
