--- a/app/src/main/res/layout/activity_demo1.xml
+++ b/app/src/main/res/layout/activity_demo1.xml
@@ -9,6 +9,7 @@
         layout="@layout/view_header" />
 
     <TextView
+        android:id="@+id/text1"
         android:layout_below="@+id/header"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -18,6 +19,7 @@
         android:id="@+id/imgView_test"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/text1"
         android:layout_marginTop="@dimen/demo_img_margin_top"
         android:padding="@dimen/demo_img_padding"/>
 
