--- a/app/src/main/res/layout/activity_jpush_main.xml
+++ b/app/src/main/res/layout/activity_jpush_main.xml
@@ -1,13 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:background="@drawable/tiledstripes">
 
+    <include
+        android:id="@+id/header"
+        layout="@layout/view_header"></include>
+
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/header"
         android:orientation="vertical"
         android:padding="8dip">
 
